# PopUp-Sim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/problem-matchers/: mypy.json
.github/setup-python/: dev.yml  prod.yml
.github/workflows/: README.md  python-backend.yaml  scorecard.yml
backend/src/popup_sim/: __init__.py
docs/: ci-cd.md
docs/architecture/design-decisions/: adr-template-en.md
setup/dev/: setup_hooks.py
